[Style] Fix: Align of the Links Icons in the Footer

--- a/src/Layouts/Footer.scss
+++ b/src/Layouts/Footer.scss
@@ -90,6 +90,7 @@
         &_social {
             min-width: 50%;
             display: flex;
+            justify-content: end;
             flex-wrap: wrap;
             gap: 0.5rem 1.25rem;
 
@@ -163,6 +164,10 @@
         &-infos {
             flex-direction: column;
             gap: 1.5rem;
+
+            &_social {
+                justify-content: start;
+            }
         }
     }
 
